--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto">
         <div class="text-xl font-bold tracking-tighter">FMM<span class="text-sky-400">.</span></div>
         <div class="space-x-8 text-sm font-medium text-slate-400">
-            <a href="#" class="hover:text-white transition">Vision</a>
-            <a href="#" class="hover:text-white transition">Insights</a>
-            <a href="#" class="hover:text-white transition">Portfolio</a>
-            <a href="mailto:tu-email@ejemplo.com" class="text-sky-400 border border-sky-400/30 px-4 py-2 rounded-full hover:bg-sky-400/10 transition">Contact</a>
+            <a href="#vision" class="hover:text-white transition">Vision</a>
+            <a href="#blog" class="hover:text-white transition">Insights</a>
+            <a href="https://github.com/fmmarco29" class="hover:text-white transition">GitHub</a>
         </div>
     </nav>
 
-    <header class="hero-gradient pt-20 pb-32 px-6">
-        <div class="max-w-4xl mx-auto text-center">
+    <header class="hero-gradient pt-20 pb-32 px-6 text-center">
+        <div class="max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
                 The <span class="text-sky-400">Augmented</span> Architect
             </h1>
@@ -33,9 +32,9 @@
                 23 years of Naval Engineering excellence meeting the frontier of Autonomous AI. 
                 Architecting the future of maritime production through agentic intelligence.
             </p>
-            <div class="flex justify-center gap-4">
+            <div class="flex flex-wrap justify-center gap-4">
                 <a href="#blog" class="bg-white text-slate-900 px-8 py-3 rounded-lg font-semibold hover:bg-slate-200 transition">Read Insights</a>
-                <a href="https://github.com/fmmarco29" class="bg-slate-800 text-white px-8 py-3 rounded-lg font-semibold hover:bg-slate-700 transition">View Systems</a>
+                <a href="/AI/" class="bg-slate-800 text-white px-8 py-3 rounded-lg font-semibold hover:bg-slate-700 transition">View Legacy Projects</a>
             </div>
         </div>
     </header>
@@ -47,50 +46,51 @@
                 <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Strategic Vision</div>
                 <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">Beyond RAG: The Era of Agentic Naval Design</h3>
                 <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                    Why simple information retrieval is no longer enough for complex shipbuilding environments.
+                    Exploration of how autonomous agents are transforming complex shipbuilding workflows beyond simple data retrieval.
                 </p>
-                <span class="text-xs text-slate-500 underline">Coming soon</span>
+                <span class="text-xs text-slate-500 italic">Insight in progress</span>
             </article>
 
             <article class="bg-slate-900 border border-slate-800 p-8 rounded-2xl hover:border-sky-500/50 transition group">
                 <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Industry 5.0</div>
                 <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">AI-Driven Statutory Compliance</h3>
                 <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                    Automating the integration of Class and Naval regulations into 3D CAD workflows.
+                    Automating the integration of Class and Naval regulations into modern 3D CAD environments.
                 </p>
-                <span class="text-xs text-slate-500 underline">Coming soon</span>
+                <span class="text-xs text-slate-500 italic">Insight in progress</span>
             </article>
 
             <article class="bg-slate-900 border border-slate-800 p-8 rounded-2xl hover:border-sky-500/50 transition group">
                 <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Society</div>
                 <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">The Human in the Loop</h3>
                 <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                    Redefining the role of the Senior Naval Architect in an automated ecosystem.
+                    Redefining the role of the Senior Naval Architect in an ecosystem of automated decision-making.
                 </p>
-                <span class="text-xs text-slate-500 underline">Coming soon</span>
+                <span class="text-xs text-slate-500 italic">Insight in progress</span>
             </article>
 
         </div>
 
-        <section class="mt-32 pb-20">
+        <section id="vision" class="mt-32 pb-20">
             <div class="accent-border pl-8">
-                <h2 class="text-3xl font-bold mb-6">Bridging the Gap</h2>
-                <p class="text-slate-400 max-w-3xl leading-relaxed italic">
-                    "Artificial Intelligence is not a tool to replace the architect, but a force multiplier to manage the complexity of modern naval systems."
+                <h2 class="text-3xl font-bold mb-6 tracking-tight">Bridging Two Worlds</h2>
+                <p class="text-slate-400 max-w-3xl leading-relaxed text-lg italic">
+                    "Artificial Intelligence is not a tool to replace the architect, but a force multiplier to manage the inherent complexity of modern naval systems."
                 </p>
             </div>
             
-            <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-8 text-center opacity-50">
-                <div class="p-4 grayscale hover:grayscale-0 transition">Naval Architecture</div>
-                <div class="p-4 grayscale hover:grayscale-0 transition">AI Orchestration</div>
-                <div class="p-4 grayscale hover:grayscale-0 transition">Marine Surveying</div>
-                <div class="p-4 grayscale hover:grayscale-0 transition">Knowledge Systems</div>
+            <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-8 text-center text-slate-500 font-medium uppercase tracking-widest text-xs">
+                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Naval Architecture</div>
+                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">AI Orchestration</div>
+                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Marine Surveying</div>
+                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Agentic IDEs</div>
             </div>
         </section>
     </main>
 
-    <footer class="p-10 text-center text-slate-600 text-xs border-t border-slate-900">
-        &copy; 2026 Fernando Martinez Marco. Built for the future of maritime engineering.
+    <footer class="p-12 text-center text-slate-600 text-xs border-t border-slate-900 bg-slate-950">
+        <p class="mb-4">Fernando Martinez Marco &bull; Naval Architect & AI Architect</p>
+        <p>&copy; 2026 &bull; Built for the next generation of maritime engineering.</p>
     </footer>
 
 </body>
