--- a/index.html
+++ b/index.html
@@ -7,90 +7,91 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #0f172a; color: #f8fafc; }
-        .hero-gradient { background: radial-gradient(circle at top right, #1e293b, #0f172a); }
-        .accent-border { border-left: 4px solid #38bdf8; }
+        body { font-family: 'Inter', sans-serif; background-color: #ffffff; color: #1e293b; }
+        .hero-section { background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); }
+        .accent-border { border-left: 4px solid #0f172a; }
+        .card-hover:hover { transform: translateY(-4px); transition: all 0.3s ease; }
     </style>
 </head>
 <body>
 
-    <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto">
-        <div class="text-xl font-bold tracking-tighter">FMM<span class="text-sky-400">.</span></div>
-        <div class="space-x-8 text-sm font-medium text-slate-400">
-            <a href="#vision" class="hover:text-white transition">Vision</a>
-            <a href="#blog" class="hover:text-white transition">Insights</a>
-            <a href="https://github.com/fmmarco29" class="hover:text-white transition">GitHub</a>
+    <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto border-b border-slate-100">
+        <div class="text-xl font-bold tracking-tighter text-slate-900">FMM<span class="text-blue-600">.</span></div>
+        <div class="space-x-8 text-sm font-medium text-slate-500">
+            <a href="#vision" class="hover:text-blue-600 transition">Vision</a>
+            <a href="#blog" class="hover:text-blue-600 transition">Insights</a>
+            <a href="https://github.com/fmmarco29" class="hover:text-blue-600 transition">GitHub</a>
         </div>
     </nav>
 
-    <header class="hero-gradient pt-20 pb-32 px-6 text-center">
+    <header class="hero-section pt-24 pb-32 px-6 text-center">
         <div class="max-w-4xl mx-auto">
-            <h1 class="text-5xl md:text-7xl font-bold mb-6 tracking-tight">
-                The <span class="text-sky-400">Augmented</span> Architect
+            <h1 class="text-5xl md:text-7xl font-extrabold mb-6 tracking-tight text-slate-900">
+                The <span class="text-blue-600">Augmented</span> Architect
             </h1>
-            <p class="text-xl text-slate-400 mb-10 leading-relaxed max-w-2xl mx-auto">
+            <p class="text-xl text-slate-600 mb-10 leading-relaxed max-w-2xl mx-auto font-light">
                 23 years of Naval Engineering excellence meeting the frontier of Autonomous AI. 
-                Architecting the future of maritime production through agentic intelligence.
+                Architecting the future of maritime production.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
-                <a href="#blog" class="bg-white text-slate-900 px-8 py-3 rounded-lg font-semibold hover:bg-slate-200 transition">Read Insights</a>
-                <a href="/AI/" class="bg-slate-800 text-white px-8 py-3 rounded-lg font-semibold hover:bg-slate-700 transition">View Legacy Projects</a>
+                <a href="#blog" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700 transition shadow-lg shadow-blue-200">Read Insights</a>
+                <a href="/AI/" class="bg-white text-slate-900 border border-slate-200 px-8 py-3 rounded-lg font-semibold hover:bg-slate-50 transition shadow-sm">View Legacy Projects</a>
             </div>
         </div>
     </header>
 
-    <main id="blog" class="max-w-6xl mx-auto px-6 -mt-16">
+    <main id="blog" class="max-w-6xl mx-auto px-6 -mt-12">
         <div class="grid md:grid-cols-3 gap-8">
             
-            <article class="bg-slate-900 border border-slate-800 p-8 rounded-2xl hover:border-sky-500/50 transition group">
-                <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Strategic Vision</div>
-                <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">Beyond RAG: The Era of Agentic Naval Design</h3>
-                <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                    Exploration of how autonomous agents are transforming complex shipbuilding workflows beyond simple data retrieval.
+            <article class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm card-hover group">
+                <div class="text-blue-600 text-xs font-bold uppercase tracking-widest mb-4">Strategic Vision</div>
+                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">Beyond RAG: Agentic Design</h3>
+                <p class="text-slate-500 text-sm leading-relaxed mb-6">
+                    Exploration of how autonomous agents are transforming complex shipbuilding workflows.
                 </p>
-                <span class="text-xs text-slate-500 italic">Insight in progress</span>
+                <span class="text-xs text-slate-400 font-medium italic underline decoration-blue-200">Insight in progress</span>
             </article>
 
-            <article class="bg-slate-900 border border-slate-800 p-8 rounded-2xl hover:border-sky-500/50 transition group">
-                <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Industry 5.0</div>
-                <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">AI-Driven Statutory Compliance</h3>
-                <p class="text-slate-400 text-sm leading-relaxed mb-6">
+            <article class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm card-hover group">
+                <div class="text-blue-600 text-xs font-bold uppercase tracking-widest mb-4">Industry 5.0</div>
+                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">AI Statutory Compliance</h3>
+                <p class="text-slate-500 text-sm leading-relaxed mb-6">
                     Automating the integration of Class and Naval regulations into modern 3D CAD environments.
                 </p>
-                <span class="text-xs text-slate-500 italic">Insight in progress</span>
+                <span class="text-xs text-slate-400 font-medium italic underline decoration-blue-200">Insight in progress</span>
             </article>
 
-            <article class="bg-slate-900 border border-slate-800 p-8 rounded-2xl hover:border-sky-500/50 transition group">
-                <div class="text-sky-400 text-xs font-bold uppercase tracking-widest mb-4">Society</div>
-                <h3 class="text-xl font-bold mb-4 group-hover:text-sky-400 transition">The Human in the Loop</h3>
-                <p class="text-slate-400 text-sm leading-relaxed mb-6">
-                    Redefining the role of the Senior Naval Architect in an ecosystem of automated decision-making.
+            <article class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm card-hover group">
+                <div class="text-blue-600 text-xs font-bold uppercase tracking-widest mb-4">Society</div>
+                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">The Human in the Loop</h3>
+                <p class="text-slate-500 text-sm leading-relaxed mb-6">
+                    Redefining the role of the Senior Naval Architect in an automated decision-making ecosystem.
                 </p>
-                <span class="text-xs text-slate-500 italic">Insight in progress</span>
+                <span class="text-xs text-slate-400 font-medium italic underline decoration-blue-200">Insight in progress</span>
             </article>
 
         </div>
 
-        <section id="vision" class="mt-32 pb-20">
+        <section id="vision" class="mt-32 pb-24">
             <div class="accent-border pl-8">
-                <h2 class="text-3xl font-bold mb-6 tracking-tight">Bridging Two Worlds</h2>
-                <p class="text-slate-400 max-w-3xl leading-relaxed text-lg italic">
-                    "Artificial Intelligence is not a tool to replace the architect, but a force multiplier to manage the inherent complexity of modern naval systems."
+                <h2 class="text-3xl font-bold mb-6 tracking-tight text-slate-900">Engineering Meets Intelligence</h2>
+                <p class="text-slate-500 max-w-3xl leading-relaxed text-lg font-light italic">
+                    "AI is not a tool to replace the architect, but a force multiplier to manage the inherent complexity of modern naval systems."
                 </p>
             </div>
             
-            <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-8 text-center text-slate-500 font-medium uppercase tracking-widest text-xs">
-                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Naval Architecture</div>
-                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">AI Orchestration</div>
-                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Marine Surveying</div>
-                <div class="p-6 bg-slate-900/50 rounded-xl border border-slate-800/50">Agentic IDEs</div>
+            <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-4 text-center text-slate-400 font-bold uppercase tracking-tighter text-xs">
+                <div class="p-8 bg-slate-50 rounded-xl border border-slate-100">Naval Architecture</div>
+                <div class="p-8 bg-slate-50 rounded-xl border border-slate-100">AI Orchestration</div>
+                <div class="p-8 bg-slate-50 rounded-xl border border-slate-100">Marine Surveying</div>
+                <div class="p-8 bg-slate-50 rounded-xl border border-slate-100">Agentic Systems</div>
             </div>
         </section>
     </main>
 
-    <footer class="p-12 text-center text-slate-600 text-xs border-t border-slate-900 bg-slate-950">
-        <p class="mb-4">Fernando Martinez Marco &bull; Naval Architect & AI Architect</p>
-        <p>&copy; 2026 &bull; Built for the next generation of maritime engineering.</p>
+    <footer class="p-12 text-center text-slate-400 text-xs border-t border-slate-100 bg-slate-50">
+        <p class="mb-2 font-semibold text-slate-600 uppercase tracking-widest">Fernando Martinez Marco</p>
+        <p>Naval Architect & AI Architect &bull; &copy; 2026</p>
     </footer>
 
 </body>
