--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando Martinez | The Augmented Architect</title>
+    <title>Fernando Martinez | Engineering & Industrial Intelligence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -30,8 +30,7 @@
                 The <span class="text-blue-600">Augmented</span> Architect
             </h1>
             <p class="text-xl text-slate-600 mb-10 leading-relaxed max-w-2xl mx-auto font-light">
-                23 years of Naval Engineering excellence meeting the frontier of Autonomous AI. 
-                Architecting the future of maritime production.
+                Naval Architect and Senior Surveyor. Currently researching the integration of AI agents into production processes and industrial design workflows.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
                 <a href="#blog" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700 transition shadow-lg shadow-blue-200">Read Insights</a>
