--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto border-b border-slate-100">
-        <div class="text-xl font-bold tracking-tighter text-slate-900">FM<span class="text-blue-600"><</div>
+        <div class="text-xl font-bold tracking-tighter text-slate-900">FM<span class="text-blue-600"></div>
         <div class="space-x-8 text-sm font-medium text-slate-500">
             <a href="#vision" class="hover:text-blue-600 transition">Vision</a>
             <a href="#blog" class="hover:text-blue-600 transition">Insights</a>
