Update title and navigation text in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto border-b border-slate-100">
-        <div class="text-xl font-bold tracking-tighter text-slate-900">FM<span class="text-blue-600"></div>
+        <div class="text-xl font-bold tracking-tighter text-slate-900">F<span class="text-blue-600">M</div>
         <div class="space-x-8 text-sm font-medium text-slate-500">
             <a href="#vision" class="hover:text-blue-600 transition">Vision</a>
             <a href="#blog" class="hover:text-blue-600 transition">Insights</a>
@@ -44,7 +44,7 @@
             
             <article class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm card-hover group">
                 <div class="text-blue-600 text-xs font-bold uppercase tracking-widest mb-4">Strategic Vision</div>
-                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">Beyond RAG: Agentic Design</h3>
+                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">Beyond Graph-RAG: Agentic Design</h3>
                 <p class="text-slate-500 text-sm leading-relaxed mb-6">
                     Exploration of how autonomous agents are transforming complex shipbuilding workflows.
                 </p>
