Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="hero-section pt-24 pb-32 px-6 text-center">
         <div class="max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-7xl font-extrabold mb-6 tracking-tight text-slate-900">
-                The <span class="text-blue-600">Augmented</span> Architect
+                Engineering & <span class="text-blue-600">Industrial</span> Intelligence
             </h1>
             <p class="text-xl text-slate-600 mb-10 leading-relaxed max-w-2xl mx-auto font-light">
                 Naval Architect and Senior Surveyor. Currently researching the integration of AI agents into production processes and industrial design workflows.
