Update footer profession description

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <footer class="p-12 text-center text-slate-400 text-xs border-t border-slate-100 bg-slate-50">
         <p class="mb-2 font-semibold text-slate-600 uppercase tracking-widest">Fernando Martinez Marco</p>
-        <p>Naval Architect & AI Architect &bull; &copy; 2026</p>
+        <p>Naval Architect & AI Architecture &bull; &copy; 2026</p>
     </footer>
 
 </body>
