Update research description and add new insights
Expanded the description of research focus and added new insights on Bayesian Networks and Knowledge Graphs.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Engineering & <span class="text-blue-600">Industrial Intelligence</span>
             </h1>
             <p class="text-xl text-slate-600 mb-10 leading-relaxed max-w-2xl mx-auto font-light">
-                Naval Architect and Senior Surveyor. Currently researching the integration of AI agents into production processes and industrial design workflows.
+                Naval Architect and Senior Surveyor. Currently researching the integration of AI agents, Knowledge Graphs, and Bayesian Networks into production processes and industrial design workflows.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
                 <a href="#blog" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700 transition shadow-lg shadow-blue-200">Read Insights</a>
@@ -47,6 +47,15 @@
                 <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">Beyond Graph-RAG: Agentic Design</h3>
                 <p class="text-slate-500 text-sm leading-relaxed mb-6">
                     Exploration of how autonomous agents are transforming complex shipbuilding workflows.
+                </p>
+                <span class="text-xs text-slate-400 font-medium italic underline decoration-blue-200">Insight in progress</span>
+            </article>
+
+            <article class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm card-hover group">
+                <div class="text-blue-600 text-xs font-bold uppercase tracking-widest mb-4">Insights/Exploration</div>
+                <h3 class="text-xl font-bold mb-4 text-slate-900 group-hover:text-blue-600 transition">Probabilistic Reasoning & Knowledge Systems</h3>
+                <p class="text-slate-500 text-sm leading-relaxed mb-6">
+                    Exploring the use of Bayesian Networks for uncertainty management in engineering and Knowledge Graphs to create structured, reliable technical memory.
                 </p>
                 <span class="text-xs text-slate-400 font-medium italic underline decoration-blue-200">Insight in progress</span>
             </article>
